--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div>
         <form class="content">
             <input type="text" id="color" placeholder="Elige un color"><br>
-            <button class=botones type="button" id="cri">Cri</button><br>
-            <button class=botones type="button" id="superCri">Super Cri</button>
+            <button class=botones type="button" id="cri">CRI</button><br>
+            <button class=botones type="button" id="superCri">SUPER CRI</button>
         </form>
     </div>
     <script type="text/javascript" src="js/app.js"></script>
